--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <!--Colors: #0B0C10 #1F2833 #C5C6C7 #66FCF1 #45A29E-->
         <!--HTML entity: &#9660;-->
-        <section class="header">
-            <a href="index.html"><img class="home-icon" src="home-removebg-preview.png"></a>
+        <section id="header">
+            <div class="home">
+                <a href="index.html"><img class="home-icon" src="logo (4).png"></a>
+                <a href="index.html">Jack Pham</a>
+            </div>
+            <div id="info">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <!--<button class="subnav-button">Projects</button>
+                    <div class="subnav">
+                        <a href="#grade-6">Grade 6</a>
+                        <a href="#grade-7">Grade 7</a>
+                    </div>-->
+                    <li><a href="#achievements">Achievements</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </section>
     </body>
 </html>
